[BugFix] Fix the npe of show routine load (#50963)
Signed-off-by: trueeyu <lxhhust350@qq.com>
(cherry picked from commit 5bc037dadd0296501ed490ba0e00913689fbdca8)

# Conflicts:
#	fe/fe-core/src/main/java/com/starrocks/load/routineload/RoutineLoadJob.java
#	fe/fe-core/src/test/java/com/starrocks/load/routineload/RoutineLoadJobTest.java